Fixed alignment after files container was given too much height

--- a/src/app/components/dashboard/files/list/FilesList.module.scss
+++ b/src/app/components/dashboard/files/list/FilesList.module.scss
@@ -5,7 +5,7 @@
 
 .listContainer {
   width: 100%;
-  height: 20vw;
+  height: 15vw;
   overflow-y: scroll;
   z-index: 1;
   scroll-snap-type: y mandatory;
