--- a/src/app/components/dashboard/files/list/item/FilesListItem.module.scss
+++ b/src/app/components/dashboard/files/list/item/FilesListItem.module.scss
@@ -16,7 +16,7 @@
   scroll-snap-align: center;
   animation: fade linear both;
   animation-timeline: view();
-  animation-range: entry 100% cover 20%;
+  animation-range: entry 100% cover 30%;
 
   // different animation for last item
   &:last-child {
